# shopping-list

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: db.rs  main.rs  models.rs  ws.rs
templates/: index.html
